Add tests for cell integration to mapping basic type